; ModuleID = '/home/carl/AnghaBench/libgit2/tests/core/extr_filebuf.c_test_core_filebuf__0.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/core/extr_filebuf.c_test_core_filebuf__0.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@GIT_FILEBUF_INIT = common dso_local global i32 0, align 4
@__const.test_core_filebuf__0.test = private unnamed_addr constant [5 x i8] c"test\00", align 1
@__const.test_core_filebuf__0.testlock = private unnamed_addr constant [10 x i8] c"test.lock\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @test_core_filebuf__0() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  %3 = alloca [5 x i8], align 1
  %4 = alloca [10 x i8], align 1
  %5 = load i32, i32* @GIT_FILEBUF_INIT, align 4
  store i32 %5, i32* %1, align 4
  %6 = bitcast [5 x i8]* %3 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 1 %6, i8* align 1 getelementptr inbounds ([5 x i8], [5 x i8]* @__const.test_core_filebuf__0.test, i32 0, i32 0), i64 5, i1 false)
  %7 = bitcast [10 x i8]* %4 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 1 %7, i8* align 1 getelementptr inbounds ([10 x i8], [10 x i8]* @__const.test_core_filebuf__0.testlock, i32 0, i32 0), i64 10, i1 false)
  %8 = getelementptr inbounds [10 x i8], [10 x i8]* %4, i64 0, i64 0
  %9 = call i32 @p_creat(i8* %8, i32 484)
  store i32 %9, i32* %2, align 4
  %10 = load i32, i32* %2, align 4
  %11 = call i32 @cl_must_pass(i32 %10)
  %12 = load i32, i32* %2, align 4
  %13 = call i32 @p_close(i32 %12)
  %14 = call i32 @cl_must_pass(i32 %13)
  %15 = getelementptr inbounds [5 x i8], [5 x i8]* %3, i64 0, i64 0
  %16 = call i32 @git_filebuf_open(i32* %1, i8* %15, i32 0, i32 438)
  %17 = call i32 @cl_git_fail(i32 %16)
  %18 = getelementptr inbounds [10 x i8], [10 x i8]* %4, i64 0, i64 0
  %19 = call i32 @git_path_exists(i8* %18)
  %20 = call i32 @cl_assert(i32 %19)
  %21 = getelementptr inbounds [10 x i8], [10 x i8]* %4, i64 0, i64 0
  %22 = call i32 @p_unlink(i8* %21)
  %23 = call i32 @cl_must_pass(i32 %22)
  ret void
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #1

declare dso_local i32 @p_creat(i8*, i32) #2

declare dso_local i32 @cl_must_pass(i32) #2

declare dso_local i32 @p_close(i32) #2

declare dso_local i32 @cl_git_fail(i32) #2

declare dso_local i32 @git_filebuf_open(i32*, i8*, i32, i32) #2

declare dso_local i32 @cl_assert(i32) #2

declare dso_local i32 @git_path_exists(i8*) #2

declare dso_local i32 @p_unlink(i8*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
